added Nav Bar Style class/ Added Link to the store in the Nav Bar

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE>
-
+<style>
+    /* Added Style class Top Nav Bar to cover the fonts of the Nav Bar */
+    .top-nav-bar{
+        font-size: 16px;
+    }
+</style>
 <div>
     <!-- This is where the About, Store, Gmail, Images, drop down menu, and Profile Picture Go -->
     <nav>
         <!-- Added A which takes us to the About section that the Google Website would take us too. Forgot about the href -->
-        <a class="Top Nav Bar" id="about" href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
-
+        <a class="top-nav-bar" id="about" href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
+       <!-- This A covers the link to the Google Store -->
+        <a class="top-nav-bar" id="Store" href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
     </nav>
 
     <!-- This is the Google Body where the Logo and Search bar with two Buttons go -->
