Forgot the first commit which had the new brach being made/ added comments along with new <a>'s and 2 new buttons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,23 @@
     <nav>
         <!-- Added A which takes us to the About section that the Google Website would take us too. Forgot about the href -->
         <a class="top-nav-bar" id="about" href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
-       <!-- This A covers the link to the Google Store -->
-        <a class="top-nav-bar" id="Store" href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
+        
+        <!-- This A covers the link to the Google Store -->
+        <a class="top-nav-bar" id="store" href="https://store.google.com/US/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
+        
+        <!-- This A displays the words Gmail along with the link to sign into Gmail Page -->
+        <a class="top-nav-bar" id="gmail" href="https://gmail.com">Gmail</a>
+
+        <!-- This A displays the word Images along with the link to the Google Images Page -->
+        <a class="top-nav-bar" id="images" href="https://www.google.com/imghp?hl=en&ogbl">Images</a>
+
+        <!-- This button represents the svc image that shows the 3x3 dotted grid -->
+        <button>Dropdown Menu</button>
+
+        <!-- This button represents the profile picture that shows the user who is currently logged in -->
+        <button>Profile Menu</button>
+
+
     </nav>
 
     <!-- This is the Google Body where the Logo and Search bar with two Buttons go -->
