added id's to the Dropdown and Profile Menus

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <a class="top-nav-bar" id="images" href="https://www.google.com/imghp?hl=en&ogbl">Images</a>
 
         <!-- This button represents the svc image that shows the 3x3 dotted grid -->
-        <button>Dropdown Menu</button>
+        <button id="dropdown-menu">Dropdown Menu</button>
 
         <!-- This button represents the profile picture that shows the user who is currently logged in -->
-        <button>Profile Menu</button>
+        <button id="profile-menu">Profile Menu</button>
 
 
     </nav>
