--- a/index.html
+++ b/index.html
@@ -48,10 +48,31 @@
         </body>    
     </main>
 
+    <!-- This is where the Advertising, Busines, how it works, privicy, etc go. -->
     <footer>
+        <!-- this is the image of the green leaf -->
+        <img id="carbon-leaf">
+        
+        <!-- This anchor represents the words for the carbon neutal link -->
+        <a>Carbon neutral since 2007</a>
 
-        This is where the Advertising, Busines, how it works, privicy, etc go.
+        <!-- This anchor represnts the Advertising link -->
+        <a>Advertising</a>
 
+        <!-- This anchor represents the Business link -->
+        <a>Business</a>
+
+        <!-- This anchor represents the How Search Works Link -->
+        <a>How Search Works</a>
+
+        <!-- This anchor represents the Privacy link  -->
+        <a>Privacy</a>
+
+        <!-- This anchor represents the Terms link -->
+        <a>Terms</a>
+
+        <!-- this anchor represents the Settings link -->
+        <a>Settings</a>
 
     </footer>
 </div>
