added id's to the elements/ tried to add the green leaf for the google sustainability image but couldn't find it so I decided to leave it blank for now

--- a/index.html
+++ b/index.html
@@ -48,31 +48,32 @@
         </body>    
     </main>
 
-    <!-- This is where the Advertising, Busines, how it works, privicy, etc go. -->
+    <!-- This is where the Advertising, Business, how it works, privicy, etc go. -->
     <footer>
         <!-- this is the image of the green leaf -->
+        <!-- 3/26/21 can't find image of the green leaf so im keeping it blank -->
         <img id="carbon-leaf">
         
         <!-- This anchor represents the words for the carbon neutal link -->
-        <a>Carbon neutral since 2007</a>
+        <a id="carbon-link">Carbon neutral since 2007</a>
 
         <!-- This anchor represnts the Advertising link -->
-        <a>Advertising</a>
+        <a id="advertising-link">Advertising</a>
 
         <!-- This anchor represents the Business link -->
-        <a>Business</a>
+        <a id="business-link">Business</a>
 
         <!-- This anchor represents the How Search Works Link -->
-        <a>How Search Works</a>
+        <a id="works-link">How Search Works</a>
 
         <!-- This anchor represents the Privacy link  -->
-        <a>Privacy</a>
+        <a id="privacy-link">Privacy</a>
 
         <!-- This anchor represents the Terms link -->
-        <a>Terms</a>
+        <a id="terms-link">Terms</a>
 
         <!-- this anchor represents the Settings link -->
-        <a>Settings</a>
+        <a id="settings-link">Settings</a>
 
     </footer>
 </div>
