added comments for the dropdown menu

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
         <!-- this anchor represents the Settings link -->
         <!-- 3/27/21 turns out that the Settings link is  a dropdown menu. So I am mkaing a dropdown menu instead of a link -->
         <div class="settings-dropdown" id="settings-dropdown">
+            
+            <!-- This is the Settings option the user will see that they will click on to access the settings dropdown menu -->
             <a id="settings-link" href="">Settings</a>
+            
+            <!-- This div contains the drop down contents in the settings menu -->
             <div class="settings-dropdown-content" id="settings-dropdown-content">
                 <a id="search-settings-link">Search Settings</a>
                 <a id="advanced-search-link">Advanced Search</a>
