added style and script files/ Added the head element to link the stylesheet to the html document/ Added comments for the Drop down menu

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE>
-<style>
-    /* Added Style class Top Nav Bar to cover the fonts of the Nav Bar */
-    .top-nav-bar{
-        font-size: 16px;
-    }
-</style>
+<head>
+    <link rel="stylesheet" href="../A2_Google_Homepage/style.css">
+</head>
 <div>
     <!-- This is where the About, Store, Gmail, Images, drop down menu, and Profile Picture Go -->
     <nav>
