Got the SVG image to center on the top nav bar

--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,7 @@
         </div>
 
         <div class="right-nav">
+          
           <!-- This A displays the words Gmail along with the link to sign into Gmail Page -->
           <a class="top-nav-bar" id="gmail" href="https://gmail.com">Gmail</a>
 
@@ -41,7 +42,7 @@
 
           <!-- This button represents the svc image that shows the 3x3 dotted grid -->
           <a class="nav-button" id="dropdown-menu" role="button">
-            <svg class="dropdown-img" viewBox="0 0 24 24">
+            <svg class="dropdown-img" viewBox="0 0 24 24" style="vertical-align: middle;">
               <path
                 d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"
               ></path>
@@ -49,7 +50,7 @@
           </a>
 
           <!-- This button represents the profile picture that shows the user who is currently logged in -->
-          <a id="profile-menu">Profile Menu</a>
+          <a class="nav-button" role="button" id="profile-menu">Profile Menu</a>
         </div>
       </nav>
 
@@ -57,7 +58,7 @@
       <main>
         <!-- Added Body tag so that i know where the body of the page is -->
 
-        <body class="main-content">
+        <div class="main-content">
           <div>
             <!-- This image is the Logo for the Google website -->
             <img
@@ -178,7 +179,7 @@
             </div>
           </footer>
           <script src="../javascript/script.js"></script>
-        </body>
+        </div>
       </main>
     </div>
   </body>
