--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="html" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body class="webpage">
@@ -185,7 +185,7 @@
               </div>
             </div>
           </footer>
-          <script src="../javascript/script.js"></script>
+          <script src="javascript/script.js"></script>
         </div>
       </main>
     </div>
